[frontend] prevent AiAssistbar's toolbar buttons from shifting place when the input is expanded

--- a/desktop/core/src/desktop/js/apps/editor/components/AiAssist/AiAssistToolbar/AiAssistToolbar.scss
+++ b/desktop/core/src/desktop/js/apps/editor/components/AiAssist/AiAssistToolbar/AiAssistToolbar.scss
@@ -32,9 +32,5 @@
         color: vars.$fluidx-blue-600;
       }
     }
-
-    .hue-ai-assist-toolbar__button--active {
-      order: -2;
-    }
   }
 }
